<resources>

    <string name="send">Отправить</string>
    <string name="some_error_occured_try_again">Произошла ошибка. Пожалуйста, повторите попытку.</string>
    <string name="no_new_invitations">На данный момент у вас нет приглашений</string>
    <string name="refresh">Обновить</string>
    <string name="refresh_list">Обновить список</string>
    <string name="contact_not_saved">Контакт не сохранен</string>
    <string name="new_invitation">Новое приглашение</string>
    <string name="invitations">Приглашения</string>
    <string name="contact_not_found">Контакт не найден</string>
    <string name="start_meeting">Начать встречу</string>
    <string name="mail_to" translatable="false">rina.tktl@gmail.com</string>
    <string name="describe_problem_in_detail">Пожалуйста, опешите вашу проблему более подробно</string>
    <string name="contact_by">Связаться через …</string>
    <string name="subject_mail" translatable="false">FIND ME</string>
    <string name="invite_friend_through">Пригласить друга через …</string>
    <string name="app_find_me">Приложение "Найди меня"</string>
    <string name="share_app_description">Привет!\n\nНайди меня - это простое и легкое приложение для отображения родных и близких на карте.\n\nСкачать бесплатно\nhttps://play.google.com/store/apps/details?id=production.app.rina.findme</string>
    <string name="are_you_sure_not_confirm_phone_by_sms_code">Номер телефона еще не был подтвержден. Введите код из смс.
Вы действительно не хотите подтвердить номер телефона по коду, который был отправлен вам в смс сообщении?</string>
    <string name="attention">Внимание</string>
    <string name="hello">Привет</string>
    <string name="invitation_rejected">Ваше приглашение отклонено</string>
    <string name="invitation_accepted">Ваше приглашение принято</string>
    <string name="hello_you_wait">ждет Вас в Найди меня</string>
    <string name="donot_show_again">Больше не показывать</string>
    <string name="display_invitation_creation_hint_with_location">Нажав на значок локации будет отправлено уведомление пользователю о назначенной встрече. После принятия приглашения участники смогут просматривать местоположение друг друга.</string>
    <string name="location_permission"><![CDATA[<h4>Разрешение о местоположении устройства:</h4><br/> Приложение сможет получить доступ к точному местоположению пользователя.]]></string>
    <string name="permission_for_contacts"><![CDATA[<h4> Разрешение на контакты: </h4> <br/>Позволяет приложению считывать контакты телефона пользователя. <br/>]]></string>
    <string name="why_need_permission"><![CDATA[<b>Для чего нужны разрешения?</b>]]></string>
    <string name="need_to_give_permission"><![CDATA[<p>    Для работы приложения необходимо дать разрешения</p>]]></string>
    <string name="sync_contacts">Синхронизировать контакты</string>
    <string name="support_team">Служба поддержки</string>
    <string name="admin_message">Внимание!!!  Ваши сообщения при передачи не зашифрованны сквозным шифрованием. После нажатия на кнопку Встретились, сообшения автоматически удаляются. Счастливого общения!</string>
    <string name="user_offline">Пользователь в режиме оффлайн</string>
    <string name="too_long_message">Сообщение слишком длинное!</string>
    <string name="receiving_gps_data">Получаем данные GPS</string>
    <string name="example_valid_phone_number">Пример телефона: код страны # номер телефона (без 0) или 7#7631445277</string>
    <string name="invalid_phone_format">Неверный формат номера телефона!</string>
    <string name="phone_in_international_format">Телефон в международном\nформате без знака плюс</string>
    <string name="country_code_invalid">Неверно указан код страны</string>
    <string name="write_text">Введите текст</string>
    <string name="tap_to_back_to_map">Нажмите чтобы вернуться на карту</string>
    <string name="tap_for_chat">Нажмите здесь для открытия чата</string>
    <string name="country_code">Код страны</string>
    <string name="choose_country">Выберите страну</string>
    <string name="internet_connection_failed">Не удалось установить интернет соединение</string>
    <string name="login_should_not_contain_following_symbols">Логин не должен содержать следующие символы:</string>
    <string name="think_login">Придумайте логин</string>
    <string name="fio">ФИО</string>
    <string name="send_contact_to_friend">Пригласить друга</string>
    <string name="edit_contact">Редактировать</string>
    <string name="delete_contact">Удалить контакт</string>
    <string name="phone_number_not_confirmed">Ваш номера телефона не подтвержден.&#10;Пожалуйста, сообщите в службу поддержки клиентов <a href="rina.tktl@gmail.com">rina.tktl@gmail.com</a></string>
    <string name="user_phone_number_verified">Номер телефона был успешно подтвержден</string>
    <string name="smth_went_wrong_notice">Что-то пошло не так.&#10;Повторите попытку через 10 секунд</string>
    <string name="exceed_request_num">Превышено количество запросов</string>
    <string name="num_already_registered">Этот номер является зарегистрированным. Воспользуйтесь восстановлением пароля или укажите другой номер.</string>
    <string name="phone_num_suc_changed">Номер телефона был успешно изменен</string>
    <string name="check_internet_con">Проверьте интернет соединение и повторите попытку</string>
    <string name="email_should_not_contain">Поле E-mail не должно содержать следующие символы:</string>
    <string name="name_should_not_contain">Имя пользователя не должно содержать следующие символы:</string>
    <string name="ensure_correct_phone_num">Убедитесь в правильности введенного телефона.</string>
    <string name="same_user_login_found">Пользователь с таким логином уже существует</string>
    <string name="same_user_phone_found">Пользователь с таким телефоном уже существует</string>
    <string name="suc_registration">Вы успешно зарегистрированы</string>
    <string name="pass_not_coincide">Пароли не совпадают. Введите еще раз</string>
    <string name="retype_pass">Введите пароль еще раз</string>
    <string name="accept_user_agreement">Примите условия пользовательского соглашения</string>
    <string name="user_busy_now">Пользователь в данный момент занят</string>
    <string name="new_meeting_invitation">У вас новое приглашение на встречу от</string>
    <string name="user_lacks_app_installation">У пользователя не установлено приложение</string>
    <string name="use_maps_search">Воспользуйтесь картой поиска</string>
    <string name="no_permission_contacts">Нет разрешения на контакты</string>
    <string name="incorrect_phone_num">Неправильный номер телефона</string>
    <string name="enter_num_without_plus">Введите номер без знака +</string>
    <string name="field_phone_empty">Поле <b>Телефон</b> не должно быть пустым</string>
    <string name="field_name_empty">Поле <b>Имя</b> не должно быть пустым</string>
    <string name="added_new_contact">Добавлен новый контакт</string>
    <string name="take_advantage_of_pass_recovery">Воспользуйтесь функцией восстановления пароля</string>
    <string name="too_short_pass">Слишком короткий пароль. Введите минимум 8 символов</string>
    <string name="incorrect_activation_code">Неверный код активации</string>
    <string name="pass_suc_changed">Пароль был успешно изменен</string>
    <string name="incorrect_login_or_pass">Неверный логин или пароль</string>
    <string name="enter_pass_not_less_than_8_symbols">Введите пароль не менее 8 символов</string>
    <string name="enter_your_phone_number">Введите Ваш номер телефона</string>
    <string name="successful_login">Вход был успешно выполнен</string>
    <string name="user_online">Пользователь онлайн</string>
    <string name="will_receive_confirmation_code">*На указанный вами номер телефона придет смс сообщение с кодом подтверждения</string>
    <string name="payment_can_be_forced_depending_on_provider">**Может взиматься плата за смс в соответствии с правилами вашего тарифного плана</string>
    <string name="need_phone_confirmation">Следует подтвердить введенный номер телефона</string>
    <string name="password_not_less_than_eight">Пароль не менее 8 символов</string>
    <string name="accept">Принять</string>
    <string name="decline">Отклонить</string>
    <string name="ok">OK</string>
    <string name="enter_received_code">Введите полученный код</string>
    <string name="please_enter_old_phone_number">Пожалуйста, введите ваш старый номер телефона:</string>
    <string name="please_enter_new_phone_number">Пожалуйста, введите ваш новый номер телефона:</string>
    <string name="phone_format_hint">Телефон</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="search_by_name">  Поиск по имени</string>
    <string name="online">Online</string>
    <string name="this_you">Это вы</string>
    <string name="offline">Offline</string>
    <string name="meeting_participant">Участник встречи</string>
    <string name="met">Встретились</string>
    <string name="app_name">Найди меня</string>
    <string name="reg_app">Регистрация</string>
    <string name="enter_app">ВХОД</string>
    <string name="authorization">Авторизация</string>
    <string name="your_name">Ваше Имя</string>
    <string name="phone">Телефон</string>
    <string name="activation_code_on_phone">На указанный Вами телефон придет сообщение с кодом активации</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="re_password">Повторите пароль</string>
    <string name="personal_agreement">Я принимаю условия <b>Пользовательского соглашения</b></string>
    <string name="title_activity_login">Sign in</string>
    <string name="save_me">Запомнить меня</string>
    <string name="forget_password_a">Забыли пароль?</string>
    <string name="entering">Войти</string>
    <string name="forget_your_pass_a">Забыли Ваш пароль?</string>
    <string name="descr_if_pass_forgotten">Если вы забыли пароль от Вашего аккаунта, ниже введите номер Вашего телефона указанного при регистрации.</string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="pass_new_password">Введите новый пароль</string>
    <string name="title_activity_locate_users_on_map">Map</string>
    <string name="action_bar_profile">Профиль</string>
    <string name="action_bar_exit">Выход</string>
    <string name="welcome_action_bar_title">  Добро пожаловать! </string>
    <string name="i_have_no_registration_yet">У меня еще нет учетной записи</string>
    <string name="forgot_password">Восстановление аккаунта</string>
    <string name="my_contacts">Мои контакты</string>
    <string name="new_contact">Новый контакт</string>
    <string name="save">Сохранить</string>
    <string name="settings">Настройки</string>
    <string name="user_name">Имя пользователя</string>
    <string name="email">Электронная почта</string>
    <string name="phone_number">Номер телефона</string>
    <string name="change_phone_number">Изменить номер телефона</string>
    <string name="change">Изменить</string>
    <string name="confirm">Подтвердить</string>
    <string name="confirm_code">Подтвердить код</string>
    <string name="exit">Выйти</string>
</resources>
