<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sms_verification"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"></include>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="38dp"
        android:text="@string/need_phone_confirmation"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar" />

    <Button
        android:id="@+id/to_login_page"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background_rec_blue"
        android:gravity="center"
        android:onClick="code_confirmation_true"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="10dp"
        android:text="@string/payment_can_be_forced_depending_on_provider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="10dp"
        android:text="@string/will_receive_confirmation_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</android.support.constraint.ConstraintLayout>