<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"></include>

    <Button
        android:id="@+id/reg_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_text_style"
        android:onClick="register_in_app"
        android:text="@string/reg_app"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView37"
        app:layout_constraintVertical_bias="0.812" />


    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_tv" />

    <TextView
        android:id="@+id/agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/save_me"
        android:textColor="@color/hintDescription"
        app:layout_constraintStart_toEndOf="@+id/remember_me"
        app:layout_constraintTop_toBottomOf="@+id/password_tv" />

    <EditText
        android:id="@+id/edit_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/input_text_style"
        android:ems="10"
        android:hint="@string/phone_format_hint"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:textColor="@color/rectangleColorActiveText"
        android:textColorHint="@color/rectangleColorPassiveText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar" />

    <EditText
        android:id="@+id/password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_text_style"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/rectangleColorActiveText"
        android:textColorHint="@color/rectangleColorPassiveText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone_number" />

    <TextView
        android:id="@+id/forgetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:onClick="forget_m_password"
        android:text="@string/forget_password_a"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/agreement"
        app:layout_constraintTop_toBottomOf="@+id/password_tv" />

    <TextView
        android:id="@+id/registration_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_background_rec_blue"
        android:gravity="center"
        android:onClick="LOGin"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/entering"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agreement" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="0dp"
        android:paddingTop="230dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_tv" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/i_have_no_registration_yet"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/registration_tv"
        app:layout_constraintStart_toStartOf="@+id/registration_tv"
        app:layout_constraintTop_toTopOf="@+id/textView36" />


</android.support.constraint.ConstraintLayout>